IGNITE-16887 after review #2.0